# ROS2_COURSE

./: Dockerfile  README.md  check_frames.py  check_links.py  docker-compose.yaml  generate_curved_road_v2.py
demo_road/: dron_follower.xml  follow_road.py  launch_as2.bash
demo_road/config/: world.yaml
demo_road/config_ground_station/: rviz2_config.rviz
demo_road/utils/: get_drones.py
project_gazebo/: launch_as2.bash
src/dron_follow_road/models/gas_station/: model.config  model.sdf
src/dron_follow_road/models/gas_station_2/: model.config  model.sdf
src/dron_follow_road/models/road_curved/: model.config  model.sdf
src/dron_follow_road/worlds/: convert_world_to_model.py  gas_station.sdf  gas_station_2.world  gas_station_3.sdf
src/nav2_demo/: CMakeLists.txt  package.xml
src/nav2_demo/launch/: nav2_demo.launch.py
src/pendulum/pendulum_bringup/: package.xml
src/ros2_RobotiqGripper/: README.md
src/ros2_SimRealRobotControl/: README.md
src/ros2_SimRealRobotControl/instructions/: Installation.md
src/ros2_SimRealRobotControl/ros2srrc_endeffectors/: CMakeLists.txt
src/ros2_SimRealRobotControl/ros2srrc_execution/: CMakeLists.txt  package.xml
src/ros2_SimRealRobotControl/ros2srrc_execution/programs/: ar4_demo.yaml  iiwa_demo.yaml  irb1600_demo.yaml  rx160_demo.yaml  ur10_demo.yaml  ur10e_demo.yaml  ur16e_demo.yaml  ur20_demo.yaml  ur3_demo.yaml  ur3e_demo.yaml  ur5_demo.yaml  ur5e_demo.yaml
src/ros2_SimRealRobotControl/ros2srrc_execution/python/: conveyor_manager.py  get_pose.py  grasping_manager.py  pick_and_place.py
src/ros2_SimRealRobotControl/ros2srrc_execution/python/endeffector_gz/: parallelGripper.py  vacuumGripper.py
src/ros2_SimRealRobotControl/ros2srrc_execution/src/: move.cpp  robmove.cpp  robpose.cpp
src/ros2_SimRealRobotControl/ros2srrc_gazebo/: CMakeLists.txt  README.md  package.xml
src/ros2_SimRealRobotControl/ros2srrc_moveit/: CMakeLists.txt  README.md  package.xml
src/ros2_SimRealRobotControl/ros2srrc_robots/: CMakeLists.txt
(+101 files in other folders)
