<?xml version="1.0"?>
<package format="3">
  <name>nav2_demo</name>
  <version>0.0.1</version>
  <description>Paquete Bringup para SLAM + Nav2</description>

  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
