<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2srrc_execution</name>
  <version>0.0.0</version>
  <description>IFRA-Cranfield (Cranfield University, UK). Package: ROS 2 SimRealRobotControl - EXECUTION</description>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">mikel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <depend>ros2srrc_data</depend>
  <depend>ros2_linkattacher</depend>
  <depend>ros2_objectpose</depend>
  <depend>ros2_linkpose</depend>

  <depend>ros2_robotiqgripper</depend>
  
  <!-- <depend>abb_robot_msgs</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
